parser/y.output

state 0
	$accept: .inputs $end 

	SINGLE_INPUT  shift 2
	FILE_INPUT  shift 3
	EVAL_INPUT  shift 4
	.  error

	inputs  goto 1

state 1
	$accept:  inputs.$end 

	$end  accept
	.  error


state 2
	inputs:  SINGLE_INPUT.single_input 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	ASSERT  shift 47
	BREAK  shift 50
	CLASS  shift 24
	CONTINUE  shift 51
	DEF  shift 23
	DEL  shift 36
	FOR  shift 20
	FROM  shift 56
	GLOBAL  shift 45
	IF  shift 18
	IMPORT  shift 55
	LAMBDA  shift 65
	NONLOCAL  shift 46
	NOT  shift 67
	PASS  shift 37
	RAISE  shift 53
	RETURN  shift 52
	TRY  shift 21
	WHILE  shift 19
	WITH  shift 22
	YIELD  shift 58
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	'@'  shift 48
	.  error

	strings  goto 86
	single_input  goto 5
	simple_stmt  goto 6
	small_stmts  goto 8
	compound_stmt  goto 7
	small_stmt  goto 17
	expr_stmt  goto 26
	del_stmt  goto 27
	pass_stmt  goto 28
	flow_stmt  goto 29
	import_stmt  goto 30
	global_stmt  goto 31
	nonlocal_stmt  goto 32
	assert_stmt  goto 33
	break_stmt  goto 38
	continue_stmt  goto 39
	return_stmt  goto 40
	raise_stmt  goto 41
	yield_stmt  goto 42
	import_name  goto 43
	import_from  goto 44
	while_stmt  goto 10
	if_stmt  goto 9
	for_stmt  goto 11
	try_stmt  goto 12
	with_stmt  goto 13
	funcdef  goto 14
	classdef  goto 15
	decorated  goto 16
	expr  goto 69
	star_expr  goto 60
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test_or_star_expr  goto 57
	test  goto 59
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	testlist_star_expr  goto 35
	yield_expr  goto 54
	decorator  goto 34
	test_or_star_exprs  goto 49
	decorators  goto 25

state 3
	inputs:  FILE_INPUT.file_input 
	nl_or_stmt: .    (7)

	.  reduce 7 (src line 292)

	file_input  goto 92
	nl_or_stmt  goto 93

state 4
	inputs:  EVAL_INPUT.eval_input 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	eval_input  goto 94
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 97
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	testlist  goto 95
	tests  goto 96

state 5
	inputs:  SINGLE_INPUT single_input.    (1)

	.  reduce 1 (src line 249)


state 6
	single_input:  simple_stmt.    (4)

	.  reduce 4 (src line 266)


state 7
	single_input:  compound_stmt.NEWLINE 

	NEWLINE  shift 98
	.  error


state 8
	small_stmts:  small_stmts.';' small_stmt 
	simple_stmt:  small_stmts.optional_semicolon NEWLINE 
	optional_semicolon: .    (64)

	';'  shift 99
	.  reduce 64 (src line 605)

	optional_semicolon  goto 100

state 9
	compound_stmt:  if_stmt.    (154)

	.  reduce 154 (src line 1075)


state 10
	compound_stmt:  while_stmt.    (155)

	.  reduce 155 (src line 1080)


state 11
	compound_stmt:  for_stmt.    (156)

	.  reduce 156 (src line 1084)


state 12
	compound_stmt:  try_stmt.    (157)

	.  reduce 157 (src line 1088)


state 13
	compound_stmt:  with_stmt.    (158)

	.  reduce 158 (src line 1092)


state 14
	compound_stmt:  funcdef.    (159)

	.  reduce 159 (src line 1096)


state 15
	compound_stmt:  classdef.    (160)

	.  reduce 160 (src line 1100)


state 16
	compound_stmt:  decorated.    (161)

	.  reduce 161 (src line 1104)


state 17
	small_stmts:  small_stmt.    (66)

	.  reduce 66 (src line 607)


state 18
	if_stmt:  IF.test ':' suite elifs optional_else 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 101
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68

state 19
	while_stmt:  WHILE.test ':' suite optional_else 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 102
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68

state 20
	for_stmt:  FOR.exprlist IN testlist ':' suite optional_else 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr_or_star_expr  goto 105
	expr  goto 106
	star_expr  goto 107
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	exprlist  goto 103
	expr_or_star_exprs  goto 104

state 21
	try_stmt:  TRY.':' suite except_clauses 
	try_stmt:  TRY.':' suite except_clauses ELSE ':' suite 
	try_stmt:  TRY.':' suite except_clauses FINALLY ':' suite 
	try_stmt:  TRY.':' suite except_clauses ELSE ':' suite FINALLY ':' suite 

	':'  shift 108
	.  error


state 22
	with_stmt:  WITH.with_items ':' suite 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 111
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	with_item  goto 110
	with_items  goto 109

state 23
	funcdef:  DEF.NAME parameters optional_return_type ':' suite 

	NAME  shift 112
	.  error


state 24
	classdef:  CLASS.NAME optional_arglist_call ':' suite 

	NAME  shift 113
	.  error


state 25
	decorators:  decorators.decorator 
	decorated:  decorators.classdef_or_funcdef 

	CLASS  shift 24
	DEF  shift 23
	'@'  shift 48
	.  error

	funcdef  goto 117
	classdef  goto 116
	classdef_or_funcdef  goto 115
	decorator  goto 114

state 26
	small_stmt:  expr_stmt.    (69)

	.  reduce 69 (src line 624)


state 27
	small_stmt:  del_stmt.    (70)

	.  reduce 70 (src line 629)


state 28
	small_stmt:  pass_stmt.    (71)

	.  reduce 71 (src line 633)


state 29
	small_stmt:  flow_stmt.    (72)

	.  reduce 72 (src line 637)


state 30
	small_stmt:  import_stmt.    (73)

	.  reduce 73 (src line 641)


state 31
	small_stmt:  global_stmt.    (74)

	.  reduce 74 (src line 645)


state 32
	small_stmt:  nonlocal_stmt.    (75)

	.  reduce 75 (src line 649)


state 33
	small_stmt:  assert_stmt.    (76)

	.  reduce 76 (src line 653)


state 34
	decorators:  decorator.    (18)

	.  reduce 18 (src line 346)


state 35
	expr_stmt:  testlist_star_expr.augassign yield_expr_or_testlist 
	expr_stmt:  testlist_star_expr.equals_yield_expr_or_testlist_star_expr 
	expr_stmt:  testlist_star_expr.    (79)
	expr_stmt:  testlist_star_expr.':' test 
	expr_stmt:  testlist_star_expr.':' test '=' testlist_star_expr 

	PERCEQ  shift 125
	ANDEQ  shift 126
	STARSTAREQ  shift 131
	STAREQ  shift 123
	PLUSEQ  shift 121
	MINUSEQ  shift 122
	DIVDIVEQ  shift 132
	DIVEQ  shift 124
	LTLTEQ  shift 129
	GTGTEQ  shift 130
	HATEQ  shift 128
	PIPEEQ  shift 127
	':'  shift 120
	'='  shift 133
	.  reduce 79 (src line 695)

	augassign  goto 118
	equals_yield_expr_or_testlist_star_expr  goto 119

state 36
	del_stmt:  DEL.exprlist 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr_or_star_expr  goto 105
	expr  goto 106
	star_expr  goto 107
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	exprlist  goto 134
	expr_or_star_exprs  goto 104

state 37
	pass_stmt:  PASS.    (108)

	.  reduce 108 (src line 835)


state 38
	flow_stmt:  break_stmt.    (109)

	.  reduce 109 (src line 841)


state 39
	flow_stmt:  continue_stmt.    (110)

	.  reduce 110 (src line 846)


state 40
	flow_stmt:  return_stmt.    (111)

	.  reduce 111 (src line 850)


state 41
	flow_stmt:  raise_stmt.    (112)

	.  reduce 112 (src line 854)


state 42
	flow_stmt:  yield_stmt.    (113)

	.  reduce 113 (src line 858)


state 43
	import_stmt:  import_name.    (122)

	.  reduce 122 (src line 905)


state 44
	import_stmt:  import_from.    (123)

	.  reduce 123 (src line 910)


state 45
	global_stmt:  GLOBAL.names 

	NAME  shift 136
	.  error

	names  goto 135

state 46
	nonlocal_stmt:  NONLOCAL.names 

	NAME  shift 136
	.  error

	names  goto 137

state 47
	assert_stmt:  ASSERT.test 
	assert_stmt:  ASSERT.test ',' test 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 138
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68

state 48
	decorator:  '@'.dotted_name optional_arglist_call NEWLINE 

	NAME  shift 140
	.  error

	dotted_name  goto 139

state 49
	test_or_star_exprs:  test_or_star_exprs.',' test_or_star_expr 
	testlist_star_expr:  test_or_star_exprs.optional_comma 
	optional_comma: .    (92)

	','  shift 141
	.  reduce 92 (src line 762)

	optional_comma  goto 142

state 50
	break_stmt:  BREAK.    (114)

	.  reduce 114 (src line 863)


state 51
	continue_stmt:  CONTINUE.    (115)

	.  reduce 115 (src line 869)


state 52
	return_stmt:  RETURN.    (116)
	return_stmt:  RETURN.testlist 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  reduce 116 (src line 875)

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 97
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	testlist  goto 143
	tests  goto 96

state 53
	raise_stmt:  RAISE.    (119)
	raise_stmt:  RAISE.test 
	raise_stmt:  RAISE.test FROM test 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  reduce 119 (src line 891)

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 144
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68

state 54
	yield_stmt:  yield_expr.    (118)

	.  reduce 118 (src line 885)


state 55
	import_name:  IMPORT.dotted_as_names 

	NAME  shift 140
	.  error

	dotted_name  goto 147
	dotted_as_name  goto 146
	dotted_as_names  goto 145

state 56
	import_from:  FROM.from_arg IMPORT import_from_arg 

	NAME  shift 140
	ELIPSIS  shift 153
	'.'  shift 152
	.  error

	dot  goto 151
	dots  goto 150
	dotted_name  goto 149
	from_arg  goto 148

state 57
	test_or_star_exprs:  test_or_star_expr.    (88)

	.  reduce 88 (src line 741)


state 58
	yield_expr:  YIELD.    (310)
	yield_expr:  YIELD.FROM test 
	yield_expr:  YIELD.testlist 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	FROM  shift 154
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  reduce 310 (src line 1988)

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 97
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	testlist  goto 155
	tests  goto 96

state 59
	test_or_star_expr:  test.    (90)

	.  reduce 90 (src line 752)


state 60
	test_or_star_expr:  star_expr.    (91)

	.  reduce 91 (src line 757)


state 61
	test:  or_test.    (187)
	test:  or_test.IF or_test ELSE test 
	or_test:  or_test.OR and_test 

	IF  shift 156
	OR  shift 157
	.  reduce 187 (src line 1266)


state 62
	test:  lambdef.    (189)

	.  reduce 189 (src line 1275)


state 63
	star_expr:  '*'.expr 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 158
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80

state 64
	or_test:  and_test.    (196)
	and_test:  and_test.AND not_test 

	AND  shift 159
	.  reduce 196 (src line 1312)


state 65
	lambdef:  LAMBDA.':' test 
	lambdef:  LAMBDA.varargslist ':' test 

	NAME  shift 167
	STARSTAR  shift 164
	':'  shift 160
	'*'  shift 163
	.  error

	vfpdeftest  goto 165
	vfpdef  goto 166
	vfpdeftests1  goto 162
	varargslist  goto 161

state 66
	and_test:  not_test.    (198)

	.  reduce 198 (src line 1329)


state 67
	not_test:  NOT.not_test 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	not_test  goto 168
	comparison  goto 68

state 68
	not_test:  comparison.    (201)
	comparison:  comparison.comp_op expr 

	PLINGEQ  shift 176
	LTEQ  shift 174
	LTGT  shift 175
	EQEQ  shift 172
	GTEQ  shift 173
	IN  shift 177
	IS  shift 179
	NOT  shift 178
	'<'  shift 170
	'>'  shift 171
	.  reduce 201 (src line 1351)

	comp_op  goto 169

state 69
	comparison:  expr.    (202)
	expr:  expr.'|' xor_expr 

	'|'  shift 180
	.  reduce 202 (src line 1356)


state 70
	expr:  xor_expr.    (216)
	xor_expr:  xor_expr.'^' and_expr 

	'^'  shift 181
	.  reduce 216 (src line 1428)


state 71
	xor_expr:  and_expr.    (218)
	and_expr:  and_expr.'&' shift_expr 

	'&'  shift 182
	.  reduce 218 (src line 1438)


state 72
	and_expr:  shift_expr.    (220)
	shift_expr:  shift_expr.LTLT arith_expr 
	shift_expr:  shift_expr.GTGT arith_expr 

	LTLT  shift 183
	GTGT  shift 184
	.  reduce 220 (src line 1448)


state 73
	shift_expr:  arith_expr.    (222)
	arith_expr:  arith_expr.'+' term 
	arith_expr:  arith_expr.'-' term 

	'+'  shift 185
	'-'  shift 186
	.  reduce 222 (src line 1458)


state 74
	arith_expr:  term.    (225)
	term:  term.'*' factor 
	term:  term.'/' factor 
	term:  term.'%' factor 
	term:  term.DIVDIV factor 

	DIVDIV  shift 190
	'*'  shift 187
	'/'  shift 188
	'%'  shift 189
	.  reduce 225 (src line 1472)


state 75
	term:  factor.    (228)

	.  reduce 228 (src line 1486)


state 76
	factor:  '+'.factor 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	factor  goto 191
	power  goto 79
	atom  goto 80

state 77
	factor:  '-'.factor 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	factor  goto 192
	power  goto 79
	atom  goto 80

state 78
	factor:  '~'.factor 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	factor  goto 193
	power  goto 79
	atom  goto 80

state 79
	factor:  power.    (236)

	.  reduce 236 (src line 1521)


state 80
	power:  atom.trailers 
	power:  atom.trailers STARSTAR factor 
	trailers: .    (239)

	.  reduce 239 (src line 1537)

	trailers  goto 194

state 81
	atom:  '('.')' 
	atom:  '('.yield_expr ')' 
	atom:  '('.test_or_star_expr comp_for ')' 
	atom:  '('.test_or_star_exprs optional_comma ')' 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	YIELD  shift 58
	'('  shift 81
	')'  shift 195
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	star_expr  goto 60
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test_or_star_expr  goto 197
	test  goto 59
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	yield_expr  goto 196
	test_or_star_exprs  goto 198

state 82
	atom:  '['.']' 
	atom:  '['.test_or_star_expr comp_for ']' 
	atom:  '['.test_or_star_exprs optional_comma ']' 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	']'  shift 199
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	star_expr  goto 60
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test_or_star_expr  goto 200
	test  goto 59
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	test_or_star_exprs  goto 201

state 83
	atom:  '{'.'}' 
	atom:  '{'.dictorsetmaker '}' 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	LAMBDA  shift 65
	NOT  shift 67
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'{'  shift 83
	'}'  shift 202
	'~'  shift 78
	.  error

	strings  goto 86
	expr  goto 69
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test  goto 205
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	dictorsetmaker  goto 203
	testlistraw  goto 206
	tests  goto 207
	test_colon_tests  goto 204

state 84
	atom:  NAME.    (252)

	.  reduce 252 (src line 1608)


state 85
	atom:  NUMBER.    (253)

	.  reduce 253 (src line 1612)


state 86
	strings:  strings.STRING 
	atom:  strings.    (254)

	STRING  shift 208
	.  reduce 254 (src line 1616)


state 87
	atom:  ELIPSIS.    (255)

	.  reduce 255 (src line 1629)


state 88
	atom:  NONE.    (256)

	.  reduce 256 (src line 1633)


state 89
	atom:  TRUE.    (257)

	.  reduce 257 (src line 1637)


state 90
	atom:  FALSE.    (258)

	.  reduce 258 (src line 1641)


state 91
	strings:  STRING.    (241)

	.  reduce 241 (src line 1546)


state 92
	inputs:  FILE_INPUT file_input.    (2)

	.  reduce 2 (src line 255)


state 93
	file_input:  nl_or_stmt.ENDMARKER 
	nl_or_stmt:  nl_or_stmt.NEWLINE 
	nl_or_stmt:  nl_or_stmt.stmt 

	NEWLINE  shift 210
	ENDMARKER  shift 209
	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	ASSERT  shift 47
	BREAK  shift 50
	CLASS  shift 24
	CONTINUE  shift 51
	DEF  shift 23
	DEL  shift 36
	FOR  shift 20
	FROM  shift 56
	GLOBAL  shift 45
	IF  shift 18
	IMPORT  shift 55
	LAMBDA  shift 65
	NONLOCAL  shift 46
	NOT  shift 67
	PASS  shift 37
	RAISE  shift 53
	RETURN  shift 52
	TRY  shift 21
	WHILE  shift 19
	WITH  shift 22
	YIELD  shift 58
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	'@'  shift 48
	.  error

	strings  goto 86
	simple_stmt  goto 212
	stmt  goto 211
	small_stmts  goto 8
	compound_stmt  goto 213
	small_stmt  goto 17
	expr_stmt  goto 26
	del_stmt  goto 27
	pass_stmt  goto 28
	flow_stmt  goto 29
	import_stmt  goto 30
	global_stmt  goto 31
	nonlocal_stmt  goto 32
	assert_stmt  goto 33
	break_stmt  goto 38
	continue_stmt  goto 39
	return_stmt  goto 40
	raise_stmt  goto 41
	yield_stmt  goto 42
	import_name  goto 43
	import_from  goto 44
	while_stmt  goto 10
	if_stmt  goto 9
	for_stmt  goto 11
	try_stmt  goto 12
	with_stmt  goto 13
	funcdef  goto 14
	classdef  goto 15
	decorated  goto 16
	expr  goto 69
	star_expr  goto 60
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test_or_star_expr  goto 57
	test  goto 59
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	testlist_star_expr  goto 35
	yield_expr  goto 54
	decorator  goto 34
	test_or_star_exprs  goto 49
	decorators  goto 25

state 94
	inputs:  EVAL_INPUT eval_input.    (3)

	.  reduce 3 (src line 260)


state 95
	eval_input:  testlist.nls ENDMARKER 
	nls: .    (11)

	.  reduce 11 (src line 312)

	nls  goto 214

state 96
	tests:  tests.',' test 
	testlist:  tests.optional_comma 
	optional_comma: .    (92)

	','  shift 215
	.  reduce 92 (src line 762)

	optional_comma  goto 216

state 97
	tests:  test.    (150)

	.  reduce 150 (src line 1054)


state 98
	single_input:  compound_stmt NEWLINE.    (5)

	.  reduce 5 (src line 278)


state 99
	optional_semicolon:  ';'.    (65)
	small_stmts:  small_stmts ';'.small_stmt 

	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	ASSERT  shift 47
	BREAK  shift 50
	CONTINUE  shift 51
	DEL  shift 36
	FROM  shift 56
	GLOBAL  shift 45
	IMPORT  shift 55
	LAMBDA  shift 65
	NONLOCAL  shift 46
	NOT  shift 67
	PASS  shift 37
	RAISE  shift 53
	RETURN  shift 52
	YIELD  shift 58
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	.  reduce 65 (src line 605)

	strings  goto 86
	small_stmt  goto 217
	expr_stmt  goto 26
	del_stmt  goto 27
	pass_stmt  goto 28
	flow_stmt  goto 29
	import_stmt  goto 30
	global_stmt  goto 31
	nonlocal_stmt  goto 32
	assert_stmt  goto 33
	break_stmt  goto 38
	continue_stmt  goto 39
	return_stmt  goto 40
	raise_stmt  goto 41
	yield_stmt  goto 42
	import_name  goto 43
	import_from  goto 44
	expr  goto 69
	star_expr  goto 60
	xor_expr  goto 70
	and_expr  goto 71
	shift_expr  goto 72
	arith_expr  goto 73
	term  goto 74
	factor  goto 75
	power  goto 79
	atom  goto 80
	test_or_star_expr  goto 57
	test  goto 59
	not_test  goto 66
	lambdef  goto 62
	or_test  goto 61
	and_test  goto 64
	comparison  goto 68
	testlist_star_expr  goto 35
	yield_expr  goto 54
	test_or_star_exprs  goto 49

state 100
	simple_stmt:  small_stmts optional_semicolon.NEWLINE 

	NEWLINE  shift 218
	.  error


state 101
	if_stmt:  IF test.':' suite elifs optional_else 

	':'  shift 219
	.  error


state 102
	while_stmt:  WHILE test.':' suite optional_else 

	':'  shift 220
	.  error


state 103
	for_stmt:  FOR exprlist.IN testlist ':' suite optional_else 

	IN  shift 221
	.  error


state 104
	expr_or_star_exprs:  expr_or_star_exprs.',' expr_or_star_expr 
	exprlist:  expr_or_star_exprs.optional_comma 
	optional_comma: .    (92)

	','  shift 222
	.  reduce 92 (src line 762)

	optional_comma  goto 223

state 105
	expr_or_star_exprs:  expr_or_star_expr.    (279)

	.  reduce 279 (src line 1764)


state 106
	expr:  expr.'|' xor_expr 
	expr_or_star_expr:  expr.    (277)

	'|'  shift 180
	.  reduce 277 (src line 1754)


state 107
	expr_or_star_expr:  star_expr.    (278)

	.  reduce 278 (src line 1759)


state 108
	try_stmt:  TRY ':'.suite except_clauses 
	try_stmt:  TRY ':'.suite except_clauses ELSE ':' suite 
	try_stmt:  TRY ':'.suite except_clauses FINALLY ':' suite 
	try_stmt:  TRY ':'.suite except_clauses ELSE ':' suite FINALLY ':' suite 

	NEWLINE  shift 226
	NAME  shift 84
	STRING  shift 91
	NUMBER  shift 85
	ELIPSIS  shift 87
	FALSE  shift 90
	NONE  shift 88
	TRUE  shift 89
	ASSERT  shift 47
	BREAK  shift 50
	CONTINUE  shift 51
	DEL  shift 36
	FROM  shift 56
	GLOBAL  shift 45
	IMPORT  shift 55
	LAMBDA  shift 65
	NONLOCAL  shift 46
	NOT  shift 67
	PASS  shift 37
	RAISE  shift 53
	RETURN  shift 52
	YIELD  shift 58
	'('  shift 81
	'['  shift 82
	'+'  shift 76
	'-'  shift 77
	'*'  shift 63
	'{'  shift 83
	'~'  shift 78
	.  error
